Archive2/cd/0b4ff67d020205/output
main.cpp: In constructor 'Derived::Derived(int)':
main.cpp:9:16: error: expected class-name before '(' token
     Base::field(value)
                ^
main.cpp:9:16: error: expected '{' before '(' token
